name:                grabcite
version:             0.1.0.0
synopsis:            Library to extract citations from scientific papers
description:         Library to extract citations from scientific papers
homepage:            https://github.com/agrafix/grabcite#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2017 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GrabCite.GetCitations
                     , GrabCite.Dblp
                     , GrabCite.PaperGrep
                     , GrabCite.Annotate
                     , GrabCite
                     , GrabCite.Stats
                     , GrabCite.Context
                     , GrabCite.GlobalId
                     , GrabCite.Pipeline
                     , GrabCite.Pipeline.PdfToText
                     , GrabCite.Pipeline.IceCite
                     , GrabCite.Pipeline.IceCiteBasic
                     , GrabCite.Pipeline.Tex
                     , GrabCite.IceCite.Types
                     , Util.Regex
                     , Util.Tex
                     , Util.Sentence
  other-modules:       Util.Pdf
                     , Util.Text
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10,
                       process >= 1.4,
                       text,
                       bifunctors,
                       path,
                       path-io,
                       unordered-containers,
                       aeson >= 1.0,
                       http-types >= 0.7,
                       blaze-builder >= 0.3,
                       http-client,
                       containers,
                       mtl,
                       hashable,
                       pcre-heavy,
                       pcre-light,
                       template-haskell,
                       timespan,
                       directory >= 1.3,
                       async,
                       superrecord,
                       vector,
                       simple-logger,
                       edit-distance,
                       megaparsec
  default-language:    Haskell2010
  ghc-options:         -Wall

executable grabcite-server
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       GrabCite.Server, GrabCite.Layout
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , grabcite
                     , Spock
                     , mtl
                     , text
                     , Spock-lucid
                     , lucid
                     , path
                     , unordered-containers
                     , simple-logger
  default-language:    Haskell2010

executable grabcite-datagen
  hs-source-dirs:      app-datagen
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , grabcite
                     , path
                     , optparse-generic
                     , path
                     , path-io
                     , filepath
                     , containers
                     , aeson
                     , bytestring
                     , unordered-containers >= 0.2
                     , text
                     , async
                     , simple-logger
                     , pcre-heavy
  default-language:    Haskell2010

test-suite grabcite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grabcite
                     , hspec
                     , text
                     , path >= 0.5
                     , path-io >= 1.2
                     , containers >= 0.5
                     , yaml
                     , aeson
                     , bytestring
                     , vector
                     , simple-logger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/grabcite
